crates/ai/tests/snapshots/tool_schemas__snapshot_create_categorization_rule.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "create_categorization_rule",
  "parameters": {
    "properties": {
      "accountId": {
        "type": "string"
      },
      "activityType": {
        "type": "string"
      },
      "categoryKey": {
        "type": "string"
      },
      "matchType": {
        "enum": [
          "contains",
          "starts_with",
          "exact",
          "regex"
        ],
        "type": "string"
      },
      "name": {
        "type": "string"
      },
      "pattern": {
        "type": "string"
      },
      "taxonomyId": {
        "type": "string"
      }
    },
    "required": [
      "pattern",
      "taxonomyId",
      "categoryKey"
    ],
    "type": "object"
  }
}
