crates/ai/tests/snapshots/tool_schemas__snapshot_get_accounts.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_accounts",
  "parameters": {
    "properties": {
      "displayMode": {
        "enum": [
          "full",
          "compact"
        ],
        "type": "string"
      }
    },
    "required": [],
    "type": "object"
  }
}
