crates/ai/tests/snapshots/tool_schemas__snapshot_get_asset_allocation.snap
---
source: crates/ai/tests/tool_schemas.rs
assertion_line: 95
expression: snapshot
---
{
  "name": "get_asset_allocation",
  "parameters": {
    "properties": {
      "accountId": {
        "type": [
          "string",
          "null"
        ]
      },
      "categoryId": {
        "type": [
          "string",
          "null"
        ]
      },
      "groupBy": {
        "default": "class",
        "enum": [
          "class",
          "sector",
          "region",
          "risk",
          "security_type"
        ],
        "type": "string"
      },
      "taxonomyId": {
        "type": [
          "string",
          "null"
        ]
      }
    },
    "required": [],
    "type": "object"
  }
}
