crates/ai/tests/snapshots/tool_schemas__snapshot_get_cash_balances.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_cash_balances",
  "parameters": {
    "properties": {
      "accountId": {
        "type": "string"
      }
    },
    "required": [],
    "type": "object"
  }
}
