crates/ai/tests/snapshots/tool_schemas__snapshot_get_goals.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_goals",
  "parameters": {
    "properties": {},
    "required": [],
    "type": "object"
  }
}
