crates/ai/tests/snapshots/tool_schemas__snapshot_get_health_status.snap
---
source: crates/ai/tests/tool_schemas.rs
expression: snapshot
---
{
  "name": "get_health_status",
  "parameters": {
    "properties": {},
    "required": [],
    "type": "object"
  }
}
