crates/ai/tests/snapshots/tool_schemas__snapshot_get_income.snap
---
source: crates/ai/tests/tool_schemas.rs
assertion_line: 104
expression: snapshot
---
{
  "name": "get_income",
  "parameters": {
    "properties": {
      "period": {
        "enum": [
          "YTD",
          "LAST_YEAR",
          "ALL"
        ],
        "type": "string"
      }
    },
    "required": [],
    "type": "object"
  }
}
